<resources>
    <string name="app_name">Cat\'s Cradle</string>
    <string name="tutorial_0">Das ist die gefragte Redewendung</string>
    <string name="tutorial_1">Das sind die Erklärungen oder Übersetzungen.\n
        Nur eine ist richtig, die anderen 3 sind falsch.\n
        Tippe die richtige Antwort an.
    </string>
    <string name="tutorial_2">Wenn du die richtige Antwort gewählt hast, leuchtet die Antwort grün.</string>
    <string name="tutorial_3">Hast du die falsche Antwort gewählt, leuchtet sie rot und die richtige Antwort wird in
        gelb gezeigt.
    </string>
    <string name="tutorial_4">Hier wird angezeigt, wie viele Redewendung du hintereinander richtig erkannt hast.
    </string>
    <string name="tutorial_5">Hier wir dein Rekord an hintereinander richtig beantworteten Redewendungen angezeigt.
    </string>
    <string name="tutorial_6">Viel Spaß! :)</string>
    <string name="question0">It\'s raining cats and dogs</string>
    <string name="answer0a">Es regnet sehr stark</string>
    <string name="answer0b">Viele verschiedene Dinge passieren gleichzeitig</string>
    <string name="answer0c">Katzen und Hunde fallen vom Himmel</string>
    <string name="answer0d">Es hagelt</string>
    <string name="question1">To smell a rat</string>
    <string name="answer1a">Lunte riechen</string>
    <string name="answer1b">Einen schlechten Geruch wahrnehmen</string>
    <string name="answer1c">Einen Verräter in den eigenen Reihen vermuten</string>
    <string name="answer1d">Ein gutes Geschäft wittern</string>
    <string name="question2">To go rabbiting</string>
    <string name="answer2a">Hasen jagen</string>
    <string name="answer2b">Sich vermehren wie Kaninchen</string>
    <string name="answer2c">Die Flucht ergreifen</string>
    <string name="answer2d">Wie ein Hase hoppeln</string>
    <string name="question3">To rat on s.o./to rat sb out</string>
    <string name="answer3a">Jemand Sitzenlassen, Jemand Verpfeifen</string>
    <string name="answer3b">Jemanden ausbooten, Jemanden in einem Wettbewerb besiegen</string>
    <string name="answer3c">Jemanden beleidigen</string>
    <string name="answer3d">Jemanden wie eine Ratte behandeln</string>
    <string name="question4">To do a runner</string>
    <string name="answer4a">Die Fliege machen</string>
    <string name="answer4b">Beim Pferderennen gewinnen</string>
    <string name="answer4c">Einen guten Lauf haben</string>
    <string name="answer4d">Richtig Durchstarten</string>
    <string name="question5">A red herring</string>
    <string name="answer5a">Eine absichtlich falsch gelegte Spur</string>
    <string name="answer5b">Ein seltenes Exemplar von etwas</string>
    <string name="answer5c">Anglersprache: Ein Fisch, der zu klein ist und zurückgeworfen werden muss</string>
    <string name="answer5d">Ein auffälliges Outfit auf dem roten Teppich</string>
    <string name="question6">See you later, Alligator</string>
    <string name="answer6a">Sich von jemanden auf kindische Weise (für eine kurze Zeitspanne) verabschieden</string>
    <string name="answer6b">Sich von einem Krokodil verabschieden</string>
    <string name="answer6c">Sich von einer Person verabschieden, die man für ein Krokodil hält</string>
    <string name="answer6d">Sich darauf freuen, später ein Krokodil zu sehen</string>
    <string name="question7">Don\'t look a gifted horse in the mouth</string>
    <string name="answer7a">Einem geschenkten Pferd schaut man nicht ins Maul</string>
    <string name="answer7b">Das geschenkte Pferd nicht zu genau betrachten</string>
    <string name="answer7c">Eine geschenkte Sache nicht hinterfragen</string>
    <string name="answer7d">Ein Geschenk sollte man nicht anzweifeln</string>
    <string name="question8">The early bird catches the worm</string>
    <string name="answer8a">Der frühe Vogel fängt den Wurm</string>
    <string name="answer8b">Ein Vogel, der morgens früh aufsteht, fängt mehr</string>
    <string name="answer8c">Menschen, die früh aufstehen, sind erfolgreicher an einem Tag</string>
    <string name="answer8d">Um möglichst produktiv zu sein, sollte man morgens rechtzeitig aufstehen</string>
    <string name="question9">There are plenty other fish in the sea</string>
    <string name="answer9a">Auf der Erde gibt es genügend Menschen/Dinge, die genauso toll/gut sein können wie der oder
        das, was man verloren hat
    </string>
    <string name="answer9b">Es gibt genügend andere Fische im Meer</string>
    <string name="answer9c">Fische werden nie ausgehen im Meer</string>
    <string name="answer9d">Das Meer besteht nicht nur aus einer einzigen Fischart</string>
    <string name="question10">Hold your horses</string>
    <string name="answer10a">Mach mal langsam, immer mit der Ruhe</string>
    <string name="answer10b">Halte deine Pferde fest</string>
    <string name="answer10c">Pass auf deine Pferde auf</string>
    <string name="answer10d">Unterschätze nicht die Geschwindigkeit von Pferden</string>
    <string name="question11">Ram-raiding</string>
    <string name="answer11a">Ladendiebstahl, bei dem ein gestohlenes Auto als Rammbock dient</string>
    <string name="answer11b">Überfall auf eine Schaffarm, bei dem Widder gestohlen werden</string>
    <string name="answer11c">Mittelalterliches Turnierelement</string>
    <string name="answer11d">Fahrweise beim Autoscooterfahren, bei der die Anderen gerammt werden</string>
    <string name="question12">Red in tooth and claw</string>
    <string name="answer12a">Blutrünstig, grausam</string>
    <string name="answer12b">Von der Maul- und Klauenseuche befallen</string>
    <string name="answer12c">Bis auf die Zähne bewaffnet</string>
    <string name="answer12d">Eine rote Kriegsbemalung tragend</string>
    <string name="question13">There\'s no room to swing a cat</string>
    <string name="answer13a">Es ist so eng, dass man sich kaum umdrehen kann</string>
    <string name="answer13b">Man soll das Kind nicht mit dem Bade ausschütten</string>
    <string name="answer13c">Berühmtes Zitat eines Tierschützers</string>
    <string name="answer13d">Es gibt keinen Handlungsspielraum</string>
    <string name="question14">To ruffle sb\'s feathers</string>
    <string name="answer14a">Jemand verärgern</string>
    <string name="answer14b">Sich mit fremden Federn schmücken</string>
    <string name="answer14c">Kein gutes Haar an jemand lassen</string>
    <string name="answer14d">Beim Varieté : Jemandes Federboa (seine Rolle) stehlen</string>
    <string name="question15">Running Dog</string>
    <string name="answer15a">Ein Mitläufer</string>
    <string name="answer15b">Ein Häftling auf der Flucht</string>
    <string name="answer15c">Der Favorit beim Pferderennen</string>
    <string name="answer15d">Ein Hund, der Schafe hütet</string>
    <string name="question16">To rabbit on (about sb/sth)</string>
    <string name="answer16a">Über etwas quasseln, schwafeln</string>
    <string name="answer16b">Über jemand schlecht reden, lästern</string>
    <string name="answer16c">So schnell reden, wie ein Hase läuft</string>
    <string name="answer16d">Jemanden in der Luft zerreißen, ein Thema zerpflücken</string>
    <string name="question17">Rat pack</string>
    <string name="answer17a">Paparazzi</string>
    <string name="answer17b">Korrupte Politiker</string>
    <string name="answer17c">Ein Päckchen Rattengift</string>
    <string name="answer17d">Umgangssprachlich: Verein der Kleinnagetierfreunde</string>
    <string name="question18">Ravenhaired</string>
    <string name="answer18a">Schwarzhaarig</string>
    <string name="answer18b">Bezeichnung des Federkleides von Raben-, Krähenvögeln</string>
    <string name="answer18c">Als Adjektiv für eine Komödie: rabenschwarz</string>
    <string name="answer18d">Klug wie ein Rabe</string>
    <string name="question19">Road hog</string>
    <string name="answer19a">Ein Verkehrsrowdy</string>
    <string name="answer19b">Ein Igel auf der Fahrbahn</string>
    <string name="answer19c">Jemand, der seinen Müll auf die Straße wirft</string>
    <string name="answer19d">Hans Dampf in allen Gassen</string>
    <string name="question20">To be in the doghouse</string>
    <string name="answer20a">In Ungnade gefallen sein</string>
    <string name="answer20b">In der Zwickmühle sitzen</string>
    <string name="answer20c">Wie ein Hund hausen</string>
    <string name="answer20d">Einen Hund als besten Freund haben</string>
    <string name="question21">Not to have a dog\'s chance</string>
    <string name="answer21a">Gar keine Chance haben</string>
    <string name="answer21b">Eine letzte Chance bekommen</string>
    <string name="answer21c">Seinem Hund eine Chance geben</string>
    <string name="answer21d">Seinem Hund keine Leckerlis geben</string>
    <string name="question22">To be a dead duck</string>
    <string name="answer22a">Eine Schnapsidee</string>
    <string name="answer22b">Keine Chance mehr haben</string>
    <string name="answer22c">Komisch sein</string>
    <string name="answer22d">Aussehen wie eine tote Ente</string>
    <string name="question23">A dead bee makes no honey</string>
    <string name="answer23a">Aus nichts wird nichts</string>
    <string name="answer23b">Süß wie Honig sein</string>
    <string name="answer23c">Es wird bald Winter</string>
    <string name="answer23d">Bienen produzieren Honig</string>
    <string name="question24">A dog\'s breakfast / dinner</string>
    <string name="answer24a">Etwas schlecht gemacht haben</string>
    <string name="answer24b">Zu viel essen</string>
    <string name="answer24c">Nur Fleisch essen</string>
    <string name="answer24d">Ohne Manieren essen</string>
    <string name="question25">A dog\'s life</string>
    <string name="answer25a">Ein schlechtes Leben haben</string>
    <string name="answer25b">Ein gutes Leben haben</string>
    <string name="answer25c">Faul sein</string>
    <string name="answer25d">Zu viel Fleisch zum Essen haben</string>
    <string name="question26">Every dog has his / its day</string>
    <string name="answer26a">Jeder hat mal einen guten Tag</string>
    <string name="answer26b">Jeden Tag spazieren gehen</string>
    <string name="answer26c">Einen schlechten Tag haben</string>
    <string name="answer26d">Spaß haben</string>
    <string name="question27">Don\'t count the chicken before they are dead</string>
    <string name="answer27a">Du sollst den Tag nicht vor dem Abend loben</string>
    <string name="answer27b">Du sollst nicht alles auf einmal machen</string>
    <string name="answer27c">Du sollst sparsam sein</string>
    <string name="answer27d">Du sollst dir nicht zu viele Hühner kaufen</string>
    <string name="question28">The elephant in the room</string>
    <string name="answer28a">Ein offensichtliches Problem, was von niemandem angesprochen wird</string>
    <string name="answer28b">Der Elefant im Porzellanladen</string>
    <string name="answer28c">Dick sein</string>
    <string name="answer28d">Eine große Nase haben</string>
    <string name="question29">To go ape / apeshit</string>
    <string name="answer29a">Ausflippen</string>
    <string name="answer29b">Ärger mit seiner App haben</string>
    <string name="answer29c">Mit einer App spielen</string>
    <string name="answer29d">Zum Affen werden</string>
    <string name="question30">To back the wrong horse</string>
    <string name="answer30a">Jemanden nutzlos unterstützen (ohne Erfolg)</string>
    <string name="answer30b">Das falsche Pferd satteln</string>
    <string name="answer30c">Auf dem Rücken des anderen Pferdes sitzen</string>
    <string name="answer30d">Ein nicht passendes Pferd zurückgehen lassen</string>
    <string name="question31">Go to the dogs!</string>
    <string name="answer31a">Sehr schlecht gelaunt sein/in einer schlechten Stimmung sein</string>
    <string name="answer31b">Geh zu den Hunden</string>
    <string name="answer31c">Jemanden etwas Schlechtes wünschen</string>
</resources>