<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:id="@+id/quiz" android:visibility="visible"
        tools:visibility="visible">
    <TextView
            android:text="score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/score"
            app:layout_constraintEnd_toStartOf="@+id/question" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/highscore" android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" android:layout_marginBottom="10dp"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="Highscore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/highscore"
            app:layout_constraintEnd_toStartOf="@+id/question" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            android:layout_marginTop="20dp" android:layout_marginStart="10dp" android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"/>
    <Button
            android:text="@string/answer0d"
            android:layout_width="250dp"
            android:layout_height="100dp" android:id="@+id/answerD"
            tools:visibility="visible" android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0"
            android:layout_marginBottom="20dp" android:layout_marginStart="20dp" android:layout_marginEnd="20dp"
    />
    <Button
            android:text="@string/answer0c"
            android:layout_width="250dp"
            android:layout_height="100dp" android:id="@+id/answerC"
            tools:visibility="visible" android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintBottom_toTopOf="@+id/answerD" android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp" android:layout_marginEnd="20dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0"/>
    <Button
            android:text="@string/answer0b"
            android:layout_width="250dp"
            android:layout_height="100dp" android:id="@+id/answerB"
            tools:visibility="visible" android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintBottom_toTopOf="@+id/answerC" android:layout_marginBottom="20dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0"
            android:layout_marginStart="20dp" android:layout_marginEnd="20dp"/>
    <Button
            android:text="@string/answer0a"
            android:layout_width="250dp"
            android:layout_height="100dp" android:id="@+id/answerA"
            tools:visibility="visible" android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintBottom_toTopOf="@+id/answerB" android:layout_marginBottom="20dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0"
            android:layout_marginStart="20dp" android:layout_marginEnd="20dp"/>
    <TextView
            android:text="@string/question0"
            android:layout_width="250dp"
            android:layout_height="200dp"
            app:layout_constraintBottom_toTopOf="@+id/answerA"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp" android:id="@+id/question" android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" app:layout_constraintVertical_bias="0.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>